--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url("./assets/wallpapper.jpg") no-repeat center center fixed;
+  background: url("./assets/black.avif") no-repeat center center fixed;
   background-size: cover;
 }
 
